<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/albums_list"
            android:title="@string/menu_albums" />
        <item
            android:id="@+id/artists_list"
            android:title="@string/menu_artists" />
        <item
            android:id="@+id/collectors_list"
            android:title="@string/menu_collectors" />
    </group>
</menu>