<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_albums"
            android:title="@string/drawer_albums"/>

        <item
            android:id="@+id/nav_artists"
            android:title="@string/drawer_artists"/>

        <item
            android:id="@+id/nav_collectors"
            android:title="@string/drawer_collectors"/>
    </group>
</menu>